--- a/index.html
+++ b/index.html
@@ -202,6 +202,24 @@
 		  <div class="row">
 			<div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
 			  <div class="card-body cc-experience-header">
+				<p>2019</p>
+				<div class="h5">Freelancer</div>
+			  </div>
+			</div>
+			<div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+			  <div class="card-body">
+				<div class="h5">Python Developer</div>
+				<p>Project-Based
+				<br>Prepared a Flask-based RESTful API for a mobile application to serve data from MongoDB
+				</p>
+			  </div>
+			</div>
+		  </div>
+		</div>
+		<div class="card">
+		  <div class="row">
+			<div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+			  <div class="card-body cc-experience-header">
 				<p>2018</p>
 				<div class="h5">Freelancer</div>
 			  </div>
@@ -230,6 +248,7 @@
 				<p>Sentio Sports Analytics, Istanbul <br>
 				<a href="https://www.sentiosports.com">www.sentiosports.com</a>
 				<br>Web Services (Java & MongoDB)
+				<br>Performed analysis on Web APIs and experienced in developing Web Services with Java and MongoDB
 				</p>
 			  </div>
 			</div>
@@ -249,6 +268,7 @@
 				<p>Wiki Software, Adana <br>
 				<a href="https://www.wiki.com.tr">www.wiki.com.tr</a>
 				<br>Dealer Management System (ASP.NET MVC & MSSQL)
+				<br>Developed a Dealer Management System with both web and desktop support by using ASP.NET MVC & Implemented SQL queries for database design
 				</p>
 			  </div>
 			</div>
