--- a/index.html
+++ b/index.html
@@ -227,8 +227,8 @@
 			<div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
 			  <div class="card-body">
 				<div class="h5">Android Developer</div>
-				<p>Project-Based
-				<br>Cukurova University Mobile Application
+				<p>Cukurova University Mobile Application<br>
+				<br>Created a project-based Android mobile application to provide information about campus and city life for Cukurova University students
 				</p>
 			  </div>
 			</div>
@@ -245,7 +245,7 @@
 			<div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
 			  <div class="card-body">
 				<div class="h5">Software Developer</div>
-				<p>Sentio Sports Analytics, Istanbul <br>
+				<p>Sentio Sports Analytics, Istanbul<br>
 				<a href="https://www.sentiosports.com">www.sentiosports.com</a>
 				<br>Web Services (Java & MongoDB)
 				<br>Performed analysis on Web APIs and experienced in developing Web Services with Java and MongoDB
