--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 			<div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
 			  <div class="card-body">
 				<div class="h5">Python Developer</div>
-				<p>Project-Based
+				<p>Project-Based<br>
 				<br>Prepared a Flask-based RESTful API for a mobile application to serve data from MongoDB
 				</p>
 			  </div>
@@ -245,9 +245,8 @@
 			<div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
 			  <div class="card-body">
 				<div class="h5">Software Developer</div>
-				<p>Sentio Sports Analytics, Istanbul<br>
-				<a href="https://www.sentiosports.com">www.sentiosports.com</a>
-				<br>Web Services (Java & MongoDB)
+				<p>Sentio Sports Analytics, Istanbul <a href="https://www.sentiosports.com">(www.sentiosports.com)</a><br>
+				<br>Web Services (Java &amp; MongoDB)
 				<br>Performed analysis on Web APIs and experienced in developing Web Services with Java and MongoDB
 				</p>
 			  </div>
@@ -265,10 +264,9 @@
 			<div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
 			  <div class="card-body">
 				<div class="h5">Software Developer</div>
-				<p>Wiki Software, Adana <br>
-				<a href="https://www.wiki.com.tr">www.wiki.com.tr</a>
-				<br>Dealer Management System (ASP.NET MVC & MSSQL)
-				<br>Developed a Dealer Management System with both web and desktop support by using ASP.NET MVC & Implemented SQL queries for database design
+				<p>Wiki Software, Adana <a href="https://www.wiki.com.tr">(www.wiki.com.tr)</a><br>
+				<br>Dealer Management System (ASP.NET MVC &amp; MSSQL)
+				<br>Developed a Dealer Management System with both web and desktop support by using ASP.NET MVC &amp; Implemented SQL queries for database design
 				</p>
 			  </div>
 			</div>
