--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 								</div>
 								<div class="col-md-6">
 									<div class="progress-container progress-primary"><span
-											class="progress-badge">SQL</span>
+											class="progress-badge">SQL - NoSQL</span>
 										<div class="progress">
 											<div class="progress-bar progress-bar-primary" data-aos="progress-full"
 												data-aos-offset="10" data-aos-duration="2000" role="progressbar"
@@ -265,6 +265,52 @@
 							<div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50"
 								data-aos-duration="500">
 								<div class="card-body cc-experience-header">
+									<p>September 2021 - Present</p>
+									<div class="h5">Stevens Institute of Technology</div>
+								</div>
+							</div>
+							<div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+								<div class="card-body">
+									<div class="h5">Teaching Assistant</div>
+									<p>
+										Software Testing, Quality Assurance and Maintenance - NJ, USA<br><br>
+										● Lecture review<br>
+										● Assignment grading
+
+
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="card">
+						<div class="row">
+							<div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50"
+								data-aos-duration="500">
+								<div class="card-body cc-experience-header">
+									<p>Summer 2021</p>
+									<div class="h5">Automatic Data Processing, Inc.</div>
+								</div>
+							</div>
+							<div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+								<div class="card-body">
+									<div class="h5">Python Developer</div>
+									<p>
+										Internship - NJ, USA<br><br>
+										● Improved the speed of the existing scripts<br>
+										● Automated the system metric collections on a Linux server<br>
+										● Wrote scripts for collecting/writing Splunk, Postgres, GraphQL and MongoDB data
+
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="card">
+						<div class="row">
+							<div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50"
+								data-aos-duration="500">
+								<div class="card-body cc-experience-header">
 									<p>09/2020 - 12/2020</p>
 									<div class="h5">Freelancer</div>
 								</div>
@@ -273,7 +319,7 @@
 								<div class="card-body">
 									<div class="h5">Python Developer</div>
 									<p>
-										Project-Based<br><br>
+										Project-Based - NJ, USA<br><br>
 										● Designed and developed a Flask-based website with an admin page<br>
 										● Used web-scraping to fetch and parse data<br>
 										● Worked with MongoDB to store and serve data to the application
@@ -295,7 +341,7 @@
 								<div class="card-body">
 									<div class="h5">Python Developer</div>
 									<p>
-										Project-Based<br><br>
+										Project-Based - Istanbul, Turkey<br><br>
 										● Prepared a Flask-based RESTful API for a mobile application<br>
 										● Served data from MongoDB to the API
 									</p>
@@ -316,8 +362,7 @@
 								<div class="card-body">
 									<div class="h5">Software Developer</div>
 									<p>
-										Sentio Sports Analytics, Istanbul <a
-											href="https://www.sentiosports.com">(www.sentiosports.com)</a><br><br>
+										Internship - Istanbul, Turkey<br><br>
 										● Performed analysis on Java Web APIs<br>
 										● Experienced in developing Web Services with Java and MongoDB
 									</p>
@@ -330,7 +375,7 @@
 							<div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50"
 								data-aos-duration="500">
 								<div class="card-body cc-experience-header">
-									<p>2016</p>
+									<p>Summer 2016</p>
 									<div class="h5">Wiki Software</div>
 								</div>
 							</div>
@@ -338,8 +383,7 @@
 								<div class="card-body">
 									<div class="h5">Software Developer</div>
 									<p>
-										Wiki Software, Adana <a
-											href="https://www.wiki.com.tr">(www.wiki.com.tr)</a><br><br>
+										Internship - Adana, Turkey<br><br>
 										● Developed a Dealer Management System<br>
 										● Implemented both web and desktop support by using ASP.NET MVC<br>
 										● Wrote SQL queries for database design
