--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 							<div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50"
 								data-aos-duration="500">
 								<div class="card-body cc-education-header">
-									<p>2020 - Present</p>
+									<p>2020 - 2022</p>
 									<div class="h5">Master's Degree</div>
 								</div>
 							</div>
@@ -265,7 +265,30 @@
 							<div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50"
 								data-aos-duration="500">
 								<div class="card-body cc-experience-header">
-									<p>September 2021 - Present</p>
+									<p>MARCH 2022 - Present</p>
+									<div class="h5">Elektrik Üretim A.Ş.</div>
+								</div>
+							</div>
+							<div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+								<div class="card-body">
+									<div class="h5">Cyber Security Specialist</div>
+									<p>
+										Defending and Improving Computer and Network Systems - Ankara, Turkey<br><br>
+										● Responsible for discovering vulnerabilities and risks in networks<br>
+										● Analyzing current systems for vulnerabilities, and handling any cyber-attacks<br>
+										● Monitoring software systems and data centers with ongoing vulnerability scans
+
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="card">
+						<div class="row">
+							<div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50"
+								data-aos-duration="500">
+								<div class="card-body cc-experience-header">
+									<p>SEPT 2021 - DEC 2021</p>
 									<div class="h5">Stevens Institute of Technology</div>
 								</div>
 							</div>
@@ -311,7 +334,7 @@
 							<div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50"
 								data-aos-duration="500">
 								<div class="card-body cc-experience-header">
-									<p>09/2020 - 12/2020</p>
+									<p>SEPT 2020 - DEC 2020</p>
 									<div class="h5">Freelancer</div>
 								</div>
 							</div>
@@ -333,7 +356,7 @@
 							<div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50"
 								data-aos-duration="500">
 								<div class="card-body cc-experience-header">
-									<p>06/2019 - 09/2019</p>
+									<p>JUNE 2019 - SEPT 2019</p>
 									<div class="h5">Freelancer</div>
 								</div>
 							</div>
