--- a/index.html
+++ b/index.html
@@ -92,12 +92,10 @@
 							<div class="col-lg-12 col-md-12">
 								<div class="card-body">
 									<div class="h4 mt-0 title">About</div>
-									<p>My curiosity and interest in computers influenced my career planning and I
-										decided to have my bachelor’s degree in the field of Computer Science. In 2013,
-										I was enrolled in the Department of Computer Engineering at Cukurova University,
-										Turkey. After finishing my bachelor's degree, I started to study MS in Software
-										Engineering at Stevens Institute of Technology so that I can continue to work in
-										my field in a more professional way.</p>
+									<p>My academic journey commenced with a Bachelor's degree in Computer Science from Department of Computer Engineering at Cukurova University in Turkey. During this time, I immersed myself in the intricacies of programming, algorithms, and computer systems, laying a robust groundwork for my professional endeavors.<br><br>
+									Seeking to further augment my expertise, I pursued a Master of Science in Software Engineering at the esteemed Stevens Institute of Technology. This rigorous program provided me with advanced insights into software design, development methodologies, and project management principles, equipping me with the skills necessary to excel in the dynamic and rapidly evolving field of technology.<br><br>
+									Fueled by a fervent passion for excellence and a commitment to delivering exceptional results, I thrive on tackling complex challenges and transforming them into opportunities for growth and success. With an unwavering focus on quality, efficiency, and client satisfaction, I continuously strive to exceed expectations. 
+									</p>
 								</div>
 							</div>
 						</div>
@@ -112,6 +110,30 @@
 							<div class="row">
 								<div class="col-md-6">
 									<div class="progress-container progress-primary"><span
+											class="progress-badge">Cyber Security</span>
+										<div class="progress">
+											<div class="progress-bar progress-bar-primary" data-aos="progress-full"
+												data-aos-offset="10" data-aos-duration="2000" role="progressbar"
+												aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
+												style="width: 80%;"></div><span class="progress-value">80%</span>
+										</div>
+									</div>
+								</div>
+								<div class="col-md-6">
+									<div class="progress-container progress-primary"><span
+											class="progress-badge">Python</span>
+										<div class="progress">
+											<div class="progress-bar progress-bar-primary" data-aos="progress-full"
+												data-aos-offset="10" data-aos-duration="2000" role="progressbar"
+												aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
+												style="width: 85%;"></div><span class="progress-value">85%</span>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-md-6">
+									<div class="progress-container progress-primary"><span
 											class="progress-badge">Linux</span>
 										<div class="progress">
 											<div class="progress-bar progress-bar-primary" data-aos="progress-full"
@@ -123,31 +145,7 @@
 								</div>
 								<div class="col-md-6">
 									<div class="progress-container progress-primary"><span
-											class="progress-badge">Python</span>
-										<div class="progress">
-											<div class="progress-bar progress-bar-primary" data-aos="progress-full"
-												data-aos-offset="10" data-aos-duration="2000" role="progressbar"
-												aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
-												style="width: 75%;"></div><span class="progress-value">75%</span>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-md-6">
-									<div class="progress-container progress-primary"><span
-											class="progress-badge">Windows</span>
-										<div class="progress">
-											<div class="progress-bar progress-bar-primary" data-aos="progress-full"
-												data-aos-offset="10" data-aos-duration="2000" role="progressbar"
-												aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
-												style="width: 65%;"></div><span class="progress-value">65%</span>
-										</div>
-									</div>
-								</div>
-								<div class="col-md-6">
-									<div class="progress-container progress-primary"><span
-											class="progress-badge">Java</span>
+											class="progress-badge">Networking</span>
 										<div class="progress">
 											<div class="progress-bar progress-bar-primary" data-aos="progress-full"
 												data-aos-offset="10" data-aos-duration="2000" role="progressbar"
@@ -160,7 +158,7 @@
 							<div class="row">
 								<div class="col-md-6">
 									<div class="progress-container progress-primary"><span
-											class="progress-badge">Networking</span>
+											class="progress-badge">Java</span>
 										<div class="progress">
 											<div class="progress-bar progress-bar-primary" data-aos="progress-full"
 												data-aos-offset="10" data-aos-duration="2000" role="progressbar"
@@ -184,12 +182,12 @@
 							<div class="row">
 								<div class="col-md-6">
 									<div class="progress-container progress-primary"><span
-											class="progress-badge">Photoshop</span>
+											class="progress-badge">Windows</span>
 										<div class="progress">
 											<div class="progress-bar progress-bar-primary" data-aos="progress-full"
 												data-aos-offset="10" data-aos-duration="2000" role="progressbar"
 												aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
-												style="width: 90%;"></div><span class="progress-value">90%</span>
+												style="width: 65%;"></div><span class="progress-value">65%</span>
 										</div>
 									</div>
 								</div>
@@ -200,7 +198,7 @@
 											<div class="progress-bar progress-bar-primary" data-aos="progress-full"
 												data-aos-offset="10" data-aos-duration="2000" role="progressbar"
 												aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
-												style="width: 40%;"></div><span class="progress-value">40%</span>
+												style="width: 50%;"></div><span class="progress-value">50%</span>
 										</div>
 									</div>
 								</div>
@@ -576,9 +574,9 @@
 											<div class="col-md-12">
 												<div class="card-body text-center">
 													<p class="mb-0"><strong>Address </strong></p>
-													<p class="pb-2">Jersey City, NJ</p>
+													<p class="pb-2">Ankara, TURKEY</p>
 													<p class="mb-0"><strong>Phone</strong></p>
-													<p class="pb-2">(+1) 862-281-9558<br>(+90) 507-308-5732</p>
+													<p class="pb-2">(+90) 507 308 5732</p>
 													<p class="mb-0"><strong>Email</strong></p>
 													<p class="pb-2">izgifth@gmail.com</p>
 												</div>
